force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/leaseworks__Pre_Delivery_Payment__c.object-meta.xml
<CustomObject>
    <label>Delivery</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>