force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Aircraft_Model__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Model__c</fullName>
    <label>Aircraft Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Airframe_Manufacturer__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Aircraft_Type</valueSetName>
    </valueSet>
</CustomField>