force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Airframe_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Airframe_Manufacturer__c</fullName>
    <label>Airframe Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airbus</fullName>
                <default>true</default>
                <label>Airbus</label>
            </value>
            <value>
                <fullName>Boeing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>