force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Base_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_Purchase_Price__c</fullName>
    <label>Base Purchase Price ($M)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>