force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__BFE_Payment_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__BFE_Payment_Arrangement__c</fullName>
    <label>BFE Payment Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-pay Mfg</fullName>
            </value>
            <value>
                <fullName>Prepay Loan</fullName>
            </value>
            <value>
                <fullName>Deposit To Lender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>