force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Buyer1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Buyer1__c</fullName>
    <label>Buyer 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>ATH</fullName>
            </value>
            <value>
                <fullName>GTH</fullName>
            </value>
            <value>
                <fullName>MUISCA</fullName>
            </value>
            <value>
                <fullName>TEJO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>