force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Change_Requests_No__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Change_Requests_No__c</fullName>
    <label>Aircraft Type Change Requests No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>