force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Counter_Party__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Counter_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counterparty</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>