force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Date_limit_for_changes_on_AC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_limit_for_changes_on_AC__c</fullName>
    <label>Changes Limit Date</label>
    <type>Date</type>
</CustomField>