force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Defferal_Write__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Defferal_Write__c</fullName>
    <formula>ADDMONTHS(leaseworks__Delivery_Date__c,- leaseworks__Batch__r.leaseworks__Purchase_Agreement__r.leaseworks__Defferal_Write__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deferral Right</label>
    <type>Date</type>
</CustomField>