force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Delivery_Date_Notify__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Delivery_Date_Notify__c</fullName>
    <label>Delivery Date Notification</label>
    <type>Date</type>
</CustomField>