force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Engine_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Base_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Engine Base Price</label>
    <referenceTo>leaseworks__Engine_Base_Price__c</referenceTo>
    <relationshipName>PDP_DP</relationshipName>
    <type>Lookup</type>
</CustomField>