force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Engine_Base_Year_Mo__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Base_Year_Mo__c</fullName>
    <label>Engine Base Year &amp; Mo</label>
    <type>Date</type>
</CustomField>