force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Engine_Esc_Factor_Eng_Sc_Calc__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Esc_Factor_Eng_Sc_Calc__c</fullName>
    <label>Engine Esc Factor Eng Scenario Calc</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>