force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Engine_Escalation_Factor_DP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Escalation_Factor_DP__c</fullName>
    <formula>leaseworks__Escalation_Engine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engine Escalation Factor (DP)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>