force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Engine_Mf_Eng_Sc__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Mf_Eng_Sc__c</fullName>
    <label>Engine Manufacturer - Eng Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFM</fullName>
                <default>true</default>
                <label>CFM</label>
            </value>
            <value>
                <fullName>PW</fullName>
            </value>
            <value>
                <fullName>Rolls-Royce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>