force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Engine_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Type__c</fullName>
    <label>Engine Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Engine_Manufacturer__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Engine_Type</valueSetName>
    </valueSet>
</CustomField>