force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Engine_Type_Eng_Sc__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Type_Eng_Sc__c</fullName>
    <label>Engine Type - Eng Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Engine_Mf_Eng_Sc__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Engine_Type</valueSetName>
    </valueSet>
</CustomField>