force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Escalation_Factor_PDP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Escalation_Factor_PDP__c</fullName>
    <formula>leaseworks__Escalation__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Factor (PDP)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>