force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Financed_PDP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Financed_PDP__c</fullName>
    <formula>leaseworks__PDP_Amount__c *  leaseworks__PDP_Financed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financed PDP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>