force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Financial_DP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Financial_DP__c</fullName>
    <formula>( leaseworks__PPRF_Airframe__c * leaseworks__Escalation_Airframe__c ) + ( leaseworks__PPRF_Engine__c *  leaseworks__Escalation_Engine__c ) -  leaseworks__Total_Predelivery_Payment_M__c + leaseworks__Total_Interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial DP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>