force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Interest__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest__c</fullName>
    <label>Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>