force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Internal_Delivery_No_Rank__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Internal_Delivery_No_Rank__c</fullName>
    <label>Internal Delivery No (Rank)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>