force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__PDP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PDP_End_Date__c</fullName>
    <label>PDP End Date</label>
    <type>Date</type>
</CustomField>