force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__PDP_Financed__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PDP_Financed__c</fullName>
    <label>PDP Financed</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>