force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__PDP_Pct_Of_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PDP_Pct_Of_Purchase_Price__c</fullName>
    <label>PDP % Of Purchase Price</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>