force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__PPRF_Airframe_Eng_Sc__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PPRF_Airframe_Eng_Sc__c</fullName>
    <formula>CASE(leaseworks__Engine_Mf_Eng_Sc__c, &apos;CFM&apos;, leaseworks__Aircraft_Base_Price__r.leaseworks__Airframe_Base_Price_PDP_with_CFM__c, 
    &apos;PW&apos;, leaseworks__Aircraft_Base_Price__r.leaseworks__Airframe_Base_Price_PDP_with_PW__c,
    leaseworks__Aircraft_Base_Price__r.leaseworks__Total_Airframe_Basic_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Airframe Base Price(PDP) - Eng Scenario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>