force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Quarter_Notification__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Quarter_Notification__c</fullName>
    <formula>ADDMONTHS(leaseworks__Delivery_Date__c,- leaseworks__Batch__r.leaseworks__Purchase_Agreement__r.leaseworks__Quarter_Notification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter Notification</label>
    <type>Date</type>
</CustomField>