force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Registration_No__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Registration_No__c</fullName>
    <label>Registration No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>