force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Set_Changes_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Set_Changes_Date__c</fullName>
    <label>Set Changes Date</label>
    <type>Date</type>
</CustomField>