force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Structure__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Structure__c</fullName>
    <formula>HYPERLINK(&#39;/&#39; + leaseworks__Batch__r.leaseworks__PDP_Structure__c, leaseworks__Batch__r.leaseworks__PDP_Structure__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Structure</label>
    <type>Text</type>
</CustomField>