force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__StructureId__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__StructureId__c</fullName>
    <label>StructureId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>