force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Total_Base_Price_M__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Base_Price_M__c</fullName>
    <formula>leaseworks__PPRF_Airframe__c + leaseworks__PPRF_Engine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Base Price (PDP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>