force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Total_Financial_Price_At_Delivery_Eng_Sc__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Financial_Price_At_Delivery_Eng_Sc__c</fullName>
    <formula>IF(ISBLANK(text(leaseworks__Engine_Mf_Eng_Sc__c))|| leaseworks__Engine_Base_Price_Eng_Sc__c==null, null,
(leaseworks__PPRF_Airframe_Eng_Sc__c * leaseworks__Escalation_Airframe__c ) + ( leaseworks__PPRF_Engine_Eng_Sc__c* leaseworks__Engine_Esc_Factor_Eng_Sc_Calc__c)
)</formula>
    <label>Market Price at Delivery - Eng Scenario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>