force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Total_Payment_M__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Payment_M__c</fullName>
    <formula>IF ( leaseworks__Long_Term_Commitment_Credit_Memorandum__c, 
(leaseworks__Airframe_Net_Base_Price__c * leaseworks__Escalation_Airframe__c)+(leaseworks__Engine_Net_Base_Price__c * leaseworks__Escalation_Engine__c ) -(leaseworks__Aircraft_Base_Price__r.leaseworks__Customer_Support_Credit_Memorandum__c * leaseworks__AircraftPriceIndex__c) -  (leaseworks__Aircraft_Base_Price__r.leaseworks__Long_Term_Commitment_Credit_Memorandum__c *  leaseworks__AirframeCredit__c ) 
, 
    (leaseworks__Airframe_Net_Base_Price__c  * leaseworks__Escalation_Airframe__c) +( leaseworks__Engine_Net_Base_Price__c  * leaseworks__Escalation_Engine__c ) -(leaseworks__Aircraft_Base_Price__r.leaseworks__Customer_Support_Credit_Memorandum__c* leaseworks__AircraftPriceIndex__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Price at Delivery Form</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>