force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Total_Predelivery_Payment_M_Eng_Sc__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Predelivery_Payment_M_Eng_Sc__c</fullName>
    <formula>IF(OR(ISBLANK(TEXT(leaseworks__Engine_Mf_Eng_Sc__c)), ISBLANK(leaseworks__Engine_Base_Price_Eng_Sc__c)) , null,  leaseworks__Total_PDP_Eng_Sc__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PDP - Eng Scenario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>