force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/fields/leaseworks__Total_Predelivery_Payment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Predelivery_Payment_Percentage__c</fullName>
    <inlineHelpText>Total percentage of all payments prior to delivery.</inlineHelpText>
    <label>Total Predelivery Payment Percentage</label>
    <summarizedField>leaseworks__PDP_Payment_Schedule__c.leaseworks__Percentage_of_PDPRP__c</summarizedField>
    <summaryForeignKey>leaseworks__PDP_Payment_Schedule__c.leaseworks__PDP__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>