force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/recordTypes/leaseworks__Airbus.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Airbus</fullName>
    <active>true</active>
    <label>Airbus</label>
</RecordType>