force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/recordTypes/leaseworks__Boeing.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Boeing</fullName>
    <active>true</active>
    <label>Boeing</label>
</RecordType>