force-app/main/default/objects/leaseworks__Pre_Delivery_Payment__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Aircraft_Model__c</columns>
    <columns>leaseworks__Rank__c</columns>
    <columns>leaseworks__Airframe_Manufacturer__c</columns>
    <columns>leaseworks__Engine_Manufacturer__c</columns>
    <columns>leaseworks__Order_Sign_Date__c</columns>
    <columns>leaseworks__Delivery_Date__c</columns>
    <columns>leaseworks__Total_Predelivery_Payment_M__c</columns>
    <columns>leaseworks__Total_DP_M__c</columns>
    <columns>leaseworks__Total_Payment_M__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>